--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -7,5 +7,17 @@
 {
 	font-size: 5em;
 	margin-bottom: 30px;
+	color: #50b5d3;
 }
 
+.labelForm
+{
+	width: 5em;
+	float: left;
+}
+
+
+#auto
+{
+	width: 600px;
+}
