--- a/app/views/home/create.html.haml
+++ b/app/views/home/create.html.haml
@@ -2,9 +2,11 @@
 %br
 = form_tag('/add')
 %label Título
+=hidden_field_tag 'dados[real]'
 =text_field_tag 'dados[titulo]'
 %br
 %label Mensagem
 =text_area_tag 'dados[mensagem]', nil, :rows => 10, :cols => 30
 %br
 %input{:type => "submit", :value => "Registrar", :class => 'btn btn-success dropdown-toggle'}
+
